US16 DT32 Created Stud DB for User Object, implemented signup logic, project structure and code clean up

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,9 +56,9 @@
             android:id="@+id/signup_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
-            android:textColor="#FFFFFF"
             android:background="@drawable/button_background"
-            android:padding="12dp"/>
+            android:padding="12dp"
+            android:text="@string/sign_up"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 </RelativeLayout>
