--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -44,16 +44,17 @@
             android:layout_marginBottom="12dp"/>
 
         <EditText
+            android:id="@+id/confirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/input_background"
             android:hint="Retype password"
             android:inputType="textPassword"
-            android:background="@drawable/input_background"
-            android:padding="12dp"
-            android:layout_marginBottom="24dp"/>
+            android:padding="12dp" />
 
         <Button
-            android:id="@+id/registerButton"
+            android:id="@+id/register_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Register"
