--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_background"
+            android:onClick="onRegisterClick"
             android:padding="12dp"
             android:text="@string/sign_up"
             android:textColor="#FFFFFF" />
