--- a/app/src/main/res/layout/note_page.xml
+++ b/app/src/main/res/layout/note_page.xml
@@ -17,18 +17,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/note_contents"
-        android:layout_width="375dp"
-        android:layout_height="757dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="16dp"
+        android:background="#95FFFFFF"
+        android:enabled="true"
+        android:focusableInTouchMode="true"
+        android:gravity="top|left"
+        android:inputType="text|textAutoComplete|textAutoCorrect|textMultiLine"
         android:text="@string/note_contents"
+        android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notes_go_back"
         app:layout_constraintVertical_bias="1.0" />
