Add multiple note pages

--- a/app/src/main/res/layout/note_lists_page.xml
+++ b/app/src/main/res/layout/note_lists_page.xml
@@ -9,8 +9,8 @@
         android:id="@+id/note_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="695dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="400dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="495dp"
         android:text="Create"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,10 +20,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notes"
-        android:layout_width="1278dp"
-        android:layout_height="734dp"
+        android:layout_width="1258dp"
+        android:layout_height="584dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,19 +32,18 @@
         app:layout_constraintTop_toBottomOf="@+id/note_create" />
 
     <EditText
-        android:id="@+id/new_note"
-        android:layout_width="301dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="304dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="94dp"
-        android:layout_marginBottom="16dp"
-        android:text="Enter new note name"
-        app:layout_constraintBottom_toTopOf="@+id/notes"
+        android:id="@+id/new_note_name"
+        android:layout_width="262dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="125dp"
+        android:background="#28673AB7"
+        android:hint="Note name"
         app:layout_constraintEnd_toStartOf="@+id/note_create"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.284" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
