--- a/app/src/main/res/layout/activity_todo_list.xml
+++ b/app/src/main/res/layout/activity_todo_list.xml
@@ -7,7 +7,7 @@
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Todo List"
+        android:text="@string/todo_list"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
@@ -24,11 +24,16 @@
 
     <Button
         android:id="@+id/addTaskButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_width="90dp"
+        android:layout_height="59dp"
         android:layout_alignParentBottom="true"
-        android:text="Add Task"
-        android:onClick="launchTodoForm"/>
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="10dp"
+        android:onClick="launchTodoForm"
+        android:text="@string/add_task" />
 
 </RelativeLayout>
