--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -52,22 +52,29 @@
             android:layout_marginBottom="20dp"
             android:text="@string/flashcard_button" />
 
+        <Button
+            android:id="@+id/openPomodoroButton"
+            android:layout_width="200dp"
+            android:layout_height="61dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="70dp"
+            android:text="Pomodoro Timer" />
+
     </com.google.android.material.navigation.NavigationView>
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/settingsButton"
         android:layout_width="75dp"
         android:layout_height="70dp"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/settings"
         android:src="@drawable/ic_settings"
-        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.001" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
