--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -37,4 +37,20 @@
         app:layout_constraintStart_toEndOf="@+id/note_name"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="950dp"
+        android:layout_marginTop="5dp"
+        android:text="Delete" />
+
+    <Button
+        android:id="@+id/rename_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1100dp"
+        android:layout_marginTop="5dp"
+        android:text="Rename" />
+
 </androidx.cardview.widget.CardView>
