--- a/app/src/main/res/layout/activity_pomodoro.xml
+++ b/app/src/main/res/layout/activity_pomodoro.xml
@@ -2,34 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="32dp">
 
     <TextView
         android:id="@+id/timerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="25:00"
-        android:textSize="48sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="100dp"
+        android:text="00:00"
+        android:textSize="72sp"
+        android:textStyle="bold"
+        android:clickable="true"
+        android:focusable="true" />
 
     <Button
         android:id="@+id/startButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_below="@id/timerTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="Start" />
+        android:layout_marginTop="50dp"
+        android:text="Start"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/resetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_below="@id/startButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text="Reset" />
+        android:layout_marginTop="20dp"
+        android:text="Reset"
+        android:textSize="24sp" />
 
 </RelativeLayout>
