--- a/app/src/main/res/layout/activity_flashcards.xml
+++ b/app/src/main/res/layout/activity_flashcards.xml
@@ -2,59 +2,54 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:openDrawer="start">
 
     <!-- Main content -->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="16dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+        <EditText
+            android:id="@+id/questionEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Question"
+            android:layout_marginTop="16dp" />
 
-    <EditText
-        android:id="@+id/questionEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Question" />
+        <EditText
+            android:id="@+id/answerEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Answer"
+            android:layout_marginTop="8dp" />
 
-    <EditText
-        android:id="@+id/answerEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Answer" />
+        <Button
+            android:id="@+id/addFlashcardButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add Flashcard"
+            android:layout_marginTop="8dp" />
 
-    <Button
-        android:id="@+id/addFlashcardButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add Flashcard" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="16dp" />
-
-    <ListView
-        android:id="@+id/flashcardsListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
-
-    </RelativeLayout>
+        <ListView
+            android:id="@+id/flashcardsListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="8dp" />
+    </LinearLayout>
 
     <!-- Navigation drawer -->
     <com.google.android.material.navigation.NavigationView
