Add related-notes pop-up, LINK-NOTE-TASK DB, refactoring NOTE & TASK related classes, activities for adapting Links to TASKs,

--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -61,6 +61,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete" />
+
+        <Button
+            android:id="@+id/relatedNotesButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/related_notes" />
+
     </LinearLayout>
 
 </RelativeLayout>
